# LeLeDownload

./: .gitignore  MEMORY.md  README.md  SPEC.md  build.mjs  fix_layout.cjs  index.html  install.bat  install.js  install.ps1  lele-downloader-firefox.xpi  package-lock.json  package.json  vite.config.ts  优化总览.md  整体检查与优化.md  项目分析报告.md
.github/workflows/: release.yml
extension/: README.md  popup.html
scripts/: gen-latest-json.mjs  post-build.mjs  set-version.mjs
src/: App.tsx  index.css  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  installer.nsi  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/extension/: background.js  manifest.json  popup.js
src-tauri/src/: commands.rs  db.rs  download.rs  download.rs.backup  main.rs
src/components/: DownloadForm.tsx  DownloadItem.tsx  EmptyState.tsx  Header.tsx  SettingsPanel.tsx  StatusBar.tsx  index.ts
src/lib/: format.ts  updater.ts
src/types/: index.ts
vpatch/schemars-0.8.22/: Cargo.toml
vpatch/schemars-0.8.22/src/: lib.rs
