[package]
name = "lele_download"
version = "1.260718.0"
description = "LeLe Download Manager"
authors = ["DownloadMaster"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"
url = "2.5"
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
schemars = { path = "../vpatch/schemars-0.8.22" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
